added css styling

--- a/test.html
+++ b/test.html
@@ -16,46 +16,64 @@
 </head>
 <body>
     <header class="hero">
-        <h1 class="text-light text-center p-3">Header is here!</h1>
+        <h1 class="bg-primary text-white text-center p-3">My Team Profile</h1>
       </header>
       <main class="container">
-        <div class="row">
-            <div class ="col-3 card">
+        <div class="row d-flex justify-content-around align-items-center p-2">
+            <div class ="col-3 card p-2 m-2">
                 <div class ="card-body">
-                <h5 class ="card-title">${title}</h5>
+                <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
                 <p class="card-text">${data.getId()}</p>
                 <a href="#" class="card-link">${data.getEmail()}</a>
                 <p class="card-text">${data.getOfficeNumber()}</p>
                 </div>
             </div>
-            <div class ="col-3 card">
+            <div class ="col-3 card p-2 m-2">
                 <div class ="card-body">
-                <h5 class ="card-title">${title}</h5>
+                <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
                 <p class="card-text">${data.getId()}</p>
                 <a href="#" class="card-link">${data.getEmail()}</a>
                 <p class="card-text">${data.getOfficeNumber()}</p>
                 </div>
             </div>
-            <div class ="col-3 card">
+            <div class ="col-3 card p-2 m-2">
                 <div class ="card-body">
-                <h5 class ="card-title">${title}</h5>
+                <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
                 <p class="card-text">${data.getId()}</p>
                 <a href="#" class="card-link">${data.getEmail()}</a>
                 <p class="card-text">${data.getOfficeNumber()}</p>
                 </div>
             </div>
-            <div class ="col-3 card">
-                <div class ="card-body">
-                <h5 class ="card-title">${title}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
-                <p class="card-text">${data.getId()}</p>
-                <a href="#" class="card-link">${data.getEmail()}</a>
-                <p class="card-text">${data.getOfficeNumber()}</p>
-                </div>
+            <div class ="col-3 card p-2 m-2">
+              <div class ="card-body">
+              <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
+              <p class="card-text">${data.getId()}</p>
+              <a href="#" class="card-link">${data.getEmail()}</a>
+              <p class="card-text">${data.getOfficeNumber()}</p>
+              </div>
+          </div>
+          <div class ="col-3 card p-2 m-2">
+              <div class ="card-body">
+              <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
+              <p class="card-text">${data.getId()}</p>
+              <a href="#" class="card-link">${data.getEmail()}</a>
+              <p class="card-text">${data.getOfficeNumber()}</p>
+              </div>
+          </div>
+          <div class ="col-3 card p-2 m-2">
+            <div class ="card-body">
+            <h5 class ="card-title p-2 bg-primary text-white">${title}</h5>
+            <h6 class="card-subtitle mb-2 text-muted">${data.getName()}</h6>
+            <p class="card-text">${data.getId()}</p>
+            <a href="#" class="card-link">${data.getEmail()}</a>
+            <p class="card-text">${data.getOfficeNumber()}</p>
             </div>
+        </div>
         </div>
       </main>
 
